<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/txtTitle"
        android:textColor="@color/WhiteText"
        android:textSize="30dp"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtViewChieuCao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/txtHig"
            android:textColor="@color/WhiteText"
            android:textSize="25dp"
             />

        <EditText
            android:id="@+id/editTxtChieuCao"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/et_bg"
            android:inputType="number"
            android:textColor="#000000" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtViewCanNang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:text="@string/txtWei"
            android:textColor="@color/WhiteText"
            android:textSize="25dp"
             />

        <EditText
            android:id="@+id/editTxtViewCanNang"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:inputType="number"
            android:textColor="#000000"
            android:background="@drawable/et_bg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="9"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/txtViewGioiTinh"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:text="@string/txtSex"
            android:textColor="@color/WhiteText"
            android:textSize="25dp"
            />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="5">

            <RadioButton
                android:id="@+id/rdoBtnNam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/SexM"
                android:textColor="@color/WhiteText"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/rdoBtnNu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/SexF"
                android:textColor="@color/WhiteText"
                android:textSize="20dp" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnTinhToan"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_bg"
        android:text="TÍNH TOÁN"
        android:textColor="@color/WhiteText"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/sub1"
        android:textColor="@color/WhiteText"
        android:textSize="25dp"
         />

    <TextView
        android:id="@+id/txtViewSoBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/temp"
        android:textColor="@color/WhiteText"
        android:textSize="25dp"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/sub2"
        android:textColor="@color/WhiteText"
        android:textSize="25dp"
         />

    <TextView
        android:id="@+id/txtViewNhanXet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/temp2"
        android:textColor="@color/WhiteText"
        android:textSize="25dp"
         />

    <TextView
        android:id="@+id/txtViewKetQua"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/temp3"
        android:textColor="@color/WhiteText"
        android:textSize="25dp" />

</LinearLayout>